# nmea

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  run.sh
.github/workflows/: test.yml
docs/: DEVELOPMENT.md
examples/: CMakeLists.txt  device.cpp  listener.cpp
include/nmea/: connection.hpp  definitions.hpp  device.hpp  listener.hpp  message.hpp  nmea.hpp  visit.hpp
src/: connection.cpp  device.cpp  listener.cpp  message.cpp  nmea.cpp  utils.hpp
tests/: CMakeLists.txt  test_address_claiming.cpp  test_device.cpp  test_device_send.cpp  test_listener.cpp  test_messages.cpp  test_serialization.cpp
